spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ html {
   width: 300px;
 
   background: transparent url("../images/clock-face.svg") no-repeat center center;
-  position: relative
+  position: relative;
 }
 
 .center {
@@ -51,6 +51,7 @@ html {
 @keyframes spin {
 
   0% { transform: rotate(0deg); }
+
   100% { transform: rotate(360deg); }
 
 }
